fixed wrap of message

--- a/src/containers/ChatMessageContainer/ChatMessageContainer.scss
+++ b/src/containers/ChatMessageContainer/ChatMessageContainer.scss
@@ -19,4 +19,10 @@
   }
 }
 
+.msg {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 80%;
+}
+
 
